# LogicSim

./: CMakeLists.txt  README.md  logicSimApp.cpp  logicSimApp.h  main.cpp
Common/: IObservable.h  IObserver.h  Observable.cpp  Observable.h
Controllers/: sceneEditor.cpp  sceneEditor.h
Core/Circuit/: CircuitEnums.h  elementTypeEnum.h
Core/Circuit/Components/: IComponent.h  component.cpp  component.h  componentsFactory.cpp  componentsFactory.h  port.cpp  port.h
Core/Circuit/Components/Input/: VCCInput.cpp  VCCInput.h  gndInput.cpp  gndInput.h  inputComponent.cpp  inputComponent.h  pressButton.cpp  pressButton.h
Core/Circuit/Components/LogicGate/: andGate.cpp  andGate.h  gate.cpp  gate.h  notGate.cpp  notGate.h  orGate.cpp  orGate.h
Core/Circuit/Components/Output/: buzzer.cpp  buzzer.h  led.cpp  led.h  outputComponent.cpp  outputComponent.h
Core/Circuit/Managers/: circuitManager.cpp  circuitManager.h
Resources/: resources.qrc
UI/: mainwindow.cpp  mainwindow.h  qtApp.cpp  qtApp.h
UI/Controllers/: componentsMenuContainer.cpp  componentsMenuContainer.h  mainGuiContainer.cpp  mainGuiContainer.h  sceneEditor.cpp  sceneEditor.h
UI/Forms/: mainwindow.ui
UI/Managers/: resourceManager.cpp  resourceManager.h
UI/Models/: componentModel.cpp  componentModel.h
UI/Widgets/: draggableLabel.cpp  elementPort.cpp  elementPort.h  elementView.cpp  elementView.h  listItemWidget.cpp  listItemWidget.h  listitemwidget.cpp  listitemwidget.h  sceneWidget.cpp  sceneWidget.h  scenewidget.cpp  scenewidget.h
UI/Widgets/CircuitElement/: elementConnection.cpp  elementConnection.h  elementPort.cpp  elementPort.h  elementView.cpp  elementView.h
UI/Widgets/CircuitElement/OutputElements/: ledView.h
UI/disp/: mainwindow.cpp  mainwindow.h
UI/disp/Forms/: mainwindow.ui
UI/disp/Widgets/: componentsMenuWidget.cpp  componentsMenuWidget.h  draggableLabel.h
UI/disp/Widgets/CircuitElement/: elementConnection.cpp  elementConnection.h  elementFactory.cpp  elementFactory.h  elementPort.cpp  elementPort.h  elementView.cpp  elementView.h
UI/disp/Widgets/CircuitElement/InputElements/: gndView.cpp  gndView.h  pressButtonView.cpp  pressButtonView.h  vccView.cpp  vccView.h
UI/disp/Widgets/CircuitElement/LogicGates/: andGate.cpp  andGate.h  andGateView.cpp  andGateView.h  notGateView.cpp  notGateView.h  orGateView.cpp  orGateView.h
UI/disp/Widgets/CircuitElement/OutputElements/: buzzerView.cpp  buzzerView.h  ledView.cpp  ledView.h
